package de.halbmann.sam.api.entity;

public enum ClassificationStatus {

    PENDING,
    CLASSIFIED,
    REJECTED

}
