package de.halbmann.sam.api.entity;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class DocumentFilterRequest extends PaginationRequest {
}
