package de.halbmann.sam.api.entity;

public enum SortOrder {

    /**
     * Ascending sort order
     */
    ASC,

    /**
     * Descending sort order
     */
    DESC

}
